--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "chart.js": "^4.2.1",
         "jquery": "^3.6.1",
         "jwt-decode": "^3.1.2",
+        "leaflet": "^1.9.3",
         "multiselect-react-dropdown": "^2.0.25",
         "net": "^1.0.2",
         "react": "^18.2.0",
@@ -28,6 +29,7 @@
         "react-dom": "^18.2.0",
         "react-file-base64": "^1.0.3",
         "react-icons": "^4.8.0",
+        "react-leaflet": "^4.2.1",
         "react-redux": "^8.0.5",
         "react-router": "^6.4.3",
         "react-router-dom": "^6.4.3",
